2005-05-23  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_MSG_RESULT_UNQUOTED): Make
	obsolete; it was never documented.
	(AC_CACHE_CHECK): Use AC_MSG_RESULT instead.

2005-05-20  Stepan Kasal  <kasal@ucw.cz>

	* NEWS: @top_builddir@ is now a dirname, ac_top_builddir will follow.
	* lib/autoconf/status.m4 (_AC_SRCDIRS): Rename ...
	(ac_top_builddir): ... this ...
	(ac_top_build_prefix): ... to this; the old name is also kept, for
	  backward compatibility.
	(ac_top_builddir_sub): New variable, without the trailing slash,
	  always nonempty.
	(_AC_OUTPUT_FILES): s/@top_builddir@/$ac_top_builddir_sub/
	* doc/autoconf.texi (Configuration Actions): Rename
	  ac_top_builddir to ac_top_build_prefix.
	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Rename
	  at_top_builddir to at_top_build_prefix.
	* lib/autotest/general.m4 (AT_INIT): Likewise.

2005-05-20  Stepan Kasal  <kasal@ucw.cz>

	* ./lib/autoconf/general.m4 (_AC_INIT_PREPARE): Simplify the init
	  of confdefs.h .

2005-05-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_text_wrap): Don't m4_quote the second
	  argument to m4_foreach.  I guess it was necessary in the past,
	  but I think it's a no-op now.

2005-05-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_INIT_HELP): Merge two consecutive
	  ``cat <<_ACEOF'' commands to one.
	(_AC_CANONICAL_SPLIT): Use expr, not ``echo|sed.''
	* lib/autoconf/status.m4: On various places, use expr instead of
	  ``echo|sed.''
	(_AC_CONFIG_SPLIT, _AC_CONFIG_SPLIT_SOURCE_DEST):
	(_AC_CONFIG_SPLIT_FILE_IN): New macros, to factor out common code.
	* lib/autotest/general.m4 (AT_INIT): Use expr to get the numbers from
	  a range.
	* tests/local.at (AT_CHECK_SHELL_SYNTAX): Use awk to search for
	  the wrong patterns between ``case'' and ``esac.''  The previous
	  code had false positives.

2005-05-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autoconf/functions.m4 (_AC_LIBOBJ_ALLOCA): Prepend ${LIBOBJDIR},
	as on 2005-05-02.