@@ -55,31 +55,24 @@ edit = sed \
 autoconf.in: $(srcdir)/autoconf.as $(m4sh_m4f_dependencies)
 	$(MY_AUTOM4TE) --language M4sh --cache '' $(srcdir)/autoconf.as -o $@
 
-## All the files below depend on Makefile so that they are rebuilt
-## when the prefix etc. changes.  It took quite a while to have these
-## rules correct, don't break them!
+## All the scripts depend on Makefile so that they are rebuilt when the
+## prefix etc. changes.  It took quite a while to have the rule correct,
+## don't break it!
 ## Use chmod -w to prevent people from editing the wrong file by accident.
-autoheader autom4te autoreconf autoscan autoupdate ifnames: Makefile
+$(bin_SCRIPTS): Makefile
 	rm -f $@ $@.tmp
-	$(edit) $(srcdir)/$@.in >$@.tmp
+	$(edit) `test -f ./$@.in || echo $(srcdir)/`$@.in >$@.tmp
 	chmod +x $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
 
+autoconf: autoconf.in
 autoheader: $(srcdir)/autoheader.in
 autom4te: $(srcdir)/autom4te.in
 autoreconf: $(srcdir)/autoreconf.in
 autoscan: $(srcdir)/autoscan.in
 autoupdate: $(srcdir)/autoupdate.in
 ifnames: $(srcdir)/ifnames.in
-
-# autoconf.in is in ., not in $(srcdir).
-autoconf: autoconf.in Makefile
-	rm -f $@ $@.tmp
-	$(edit) $@.in >$@.tmp
-	chmod +x $@.tmp
-	chmod a-w $@.tmp
-	mv $@.tmp $@
 
 
 ## --------------- ##
